--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "ecommerce",
   "version": "1.0.0",
   "description": "",
-  "main": "backend/server.js",
+  "main": "src/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node backend/server.js",
-    "dev": "nodemon backend/server.js",
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false && npm install --prefix frontend && npm run build --prefix frontend",
     "lint": "eslint --ignore-path .eslintignore --ext .js,.ts .",
     "lint-and-fix": "eslint . --ext .js --fix",
